# search-crawl

./: .env.sample  .gitignore  Dockerfile  README.md  compose.yaml  justfile  lefthook.yaml  pyproject.toml
.github/workflows/: ci.yaml
examples/: search_crawl.py  search_crawl_extract.py
openapi_client/openapi_client/: __init__.py  configuration.py
openapi_client/openapi_client/api/: default_api.py
openapi_client/openapi_client/models/: __init__.py  image.py  link.py  scrape_result.py
search_crawl_client/: pyproject.toml
search_crawl_client/search_crawl_client/: __init__.py  api_client.py  configuration.py  rest.py
search_crawl_client/search_crawl_client/api/: __init__.py  default_api.py
search_crawl_client/search_crawl_client/models/: __init__.py  base_crawl_request.py  body_crawl_extract_crawl_extract_post.py  body_crawl_many_crawl_many_post.py  body_search_crawl_extract_search_crawl_extract_post.py  cache_config.py  cache_strategy.py  crawl_api_arg.py  crawl_arg.py  crawl_config.py  crawl_extract_request.py  crawl_many_api_arg.py  crawl_many_arg.py  crawl_many_request.py  crawl_request.py  crawl_request_with_url.py  crawl_request_with_urls.py  crawl_scope.py  engine_preset_key.py  engines.py  extract_request.py  general_search_crawl_request.py  general_search_crawl_result.py  general_search_request.py  general_search_result.py  http_validation_error.py  image_search_crawl_request.py  image_search_crawl_result.py  image_search_request.py  image_search_result.py  model_name.py  output_format.py  scrape_result.py  search.py  search_crawl_extract_request.py  search_crawl_request.py  search_crawl_result.py  search_request.py  search_result.py  ttl.py  (+1 more)
src/search_crawl/: cache.py  cache_config.py  crawl.py  crawler.py  main.py  page_parser.py  scrape.py  scraper.py  search.py
src/search_crawl/crawl/: crawler.py  page_parser.py  parser.py  router.py  schemas.py  scraper.py  url.py  utils.py
src/search_crawl/extract/: router.py  schemas.py
src/search_crawl/healthz/: router.py
src/search_crawl/routers/: crawl.py  search.py  search_crawl.py
src/search_crawl/search/: router.py  routing.py  schemas.py  search.py
src/search_crawl/search_crawl/: router.py  routing.py  schemas.py
tests/: conftest.py  test_api.py  test_functions.py  test_http.py  test_url.py
tests/crawl/: test_crawl.py  test_deepcrawl.py  test_pagination.py  test_url.py
tests/extract/: test_extract.py
tests/healthz/: test_healthz.py
tests/search/: test_default_args.py  test_search.py
tests/search_crawl/: test_search_crawl.py
