[project]
name = "search-crawl"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cssselect>=1.3.0",
    "fastapi[standard]>=0.115.14",
    "lxml>=5.4.0",
    "markitdown>=0.1.2",
    "patchright>=1.52.5",
    "readability-lxml>=0.8.4.1",
    "redis>=5.3.1",
]

[tool.uv]
package = true

[tool.uv.sources]
search-crawl-client = { path = "search_crawl_client" }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "search-crawl-client",
    "openapi-generator-cli[jdk4py]>=7.14.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "types-lxml>=2025.3.30",
]
